--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "description": "My resume",
+  "homepage": "https://shivakrishna-donthi.github.io/my-portfolio/",
+  "license": "MIT",
+  "author": "Shiva Krishna Donthi",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/shivakrishna-donthi/my-portfolio.git"
+  },
   "dependencies": {
     "@angular/animations": "~11.0.5",
     "@angular/common": "~11.0.5",
