--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "license": "MIT",
   "author": "Shiva Krishna Donthi",
   "repository": {
-      "type": "git",
-      "url": "https://github.com/shivakrishna-donthi/my-portfolio.git"
+    "type": "git",
+    "url": "https://github.com/shivakrishna-donthi/my-portfolio.git"
   },
   "dependencies": {
     "@angular/animations": "~11.0.5",
@@ -27,6 +27,9 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "bootstrap": "^5.0.0-beta2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
